Fix mobile map display issues
- Remove Leaflet CSS integrity hash that was blocking stylesheet loading
- Make integrity attributes conditional in templates (only include if not empty)
- Update map initialization to use DOMContentLoaded instead of readystatechange
- Add map.invalidateSize() calls to handle mobile viewport sizing
- Add resize event handler for responsive behavior

Fixes #2

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -89,7 +89,9 @@
     defer
     rel="stylesheet"
     href="{{ site.third_party_libraries.leaflet.url.css }}"
+    {% if site.third_party_libraries.leaflet.integrity.css and site.third_party_libraries.leaflet.integrity.css != "" %}
     integrity="{{ site.third_party_libraries.leaflet.integrity.css }}"
+    {% endif %}
     crossorigin="anonymous"
   >
 {% endif %}
