--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -89,8 +89,8 @@
     defer
     rel="stylesheet"
     href="{{ site.third_party_libraries.leaflet.url.css }}"
-    {% if site.third_party_libraries.leaflet.integrity.css and site.third_party_libraries.leaflet.integrity.css != "" %}
-    integrity="{{ site.third_party_libraries.leaflet.integrity.css }}"
+    {% if site.third_party_libraries.leaflet.integrity.css and site.third_party_libraries.leaflet.integrity.css != '' %}
+      integrity="{{ site.third_party_libraries.leaflet.integrity.css }}"
     {% endif %}
     crossorigin="anonymous"
   >
